--- a/client/src/style/common.scss
+++ b/client/src/style/common.scss
@@ -24,8 +24,10 @@ $topbar-left-background-color: #897E63;
 $sidebar-width: 200px;
 $sidebar-background-color: #545c64;
 $sidebar-color: #F2EEEC;
+$sidebar-padding-top: 25px;
 
 .sidebar {
+    padding-top: $sidebar-padding-top;
     width: $sidebar-width;
     background-color: $sidebar-background-color;
     color: $sidebar-color;
