--- a/client/src/style/common.scss
+++ b/client/src/style/common.scss
@@ -74,6 +74,14 @@ $login-gradient2: #5C6A06;
 .page {
     padding: 15px 30px 0 30px;
     
+    .page-title {
+        overflow: hidden;
+        margin: 20px;
+        text-align: center;
+        font-size: 24px;
+        font-weight: bold;
+    }
+    
     .head {
         padding: 0 20px 10px 20px;
         border-bottom: 1px solid rgba(113, 91, 91, .5);
@@ -95,6 +103,7 @@ $login-gradient2: #5C6A06;
         background: rgba(21, 94, 102, .3);
 
         &:hover {
+            cursor: pointer;
             background: rgba(168, 147, 28, 0.3);
         }
 
