--- a/client/src/style/common.scss
+++ b/client/src/style/common.scss
@@ -45,6 +45,11 @@ $sidebar-padding-top: 25px;
 }
 
 /**
+*  右侧page路由主体
+*/
+$mainview-background-color: $global-background-color;
+
+/**
 *  页底footer
 */
 $footer-height: 40px;
@@ -70,6 +75,12 @@ $login-gradient2: #5C6A06;
 
 
 /*****  基础样式  ******/
+
+// 动画
+
+
+
+
 // 一个路由页
 .page {
     padding: 15px 30px 0 30px;
@@ -99,12 +110,17 @@ $login-gradient2: #5C6A06;
 
     .card {
         overflow: hidden;
+        position: relative;
         height: 150px;
         background: rgba(21, 94, 102, .3);
 
         &:hover {
             cursor: pointer;
             background: rgba(168, 147, 28, 0.3);
+
+            .delete {
+                display: block;
+            }
         }
 
         .name {
@@ -119,6 +135,17 @@ $login-gradient2: #5C6A06;
             padding: 0 10px;
             line-height: 22px;
             font-size: 16px;    
+        }
+
+        .delete {
+            display: none;
+            position: absolute;
+            z-index: 100;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            right: 0;
+            font-size: 30px;
+            color: rgba(210, 32, 32, 1);  
         }
     }
 }
