新增模版 源码管理 代码 细节待添加

--- a/client/src/style/common.scss
+++ b/client/src/style/common.scss
@@ -79,7 +79,17 @@ $login-gradient2: #5C6A06;
 // 动画
 
 
+// 表格
+.table-box {
+    margin: 15px 0;
+    border: 1px solid #E0E6ED;
+}
 
+// 分页
+.pagination-wrap {
+    padding: 10px 0;
+    text-align: center;
+}
 
 // 一个路由页
 .page {
